# datasci_scripts

./: protein_classifier.py  pyproject.toml  requirements.txt
data/: aac.csv  bio_data.csv  disorder.csv  entropy.csv
metrics/: pbc_dna_scores.csv  pbc_rna_scores.csv
protein_classifier/: feature_selector.py  featurizer.py  main.py  parse_aaindex.py  protein_dataset.py  protein_model.py
