[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "protein_classifier"
description = "a package to classify DNA - and RNA - binding proteins"
version = "0.0.1"
dependencies = [
    "Bio>=1.5.2",
    "metapredict>=2.4.2",
    "numpy>=1.23.5",
    "pandas>=1.5.2",
    "scikit_learn>=1.1.3",
    "scipy>=1.9.3"
]